--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -133,15 +133,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gpKW4eEIDh2p"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "JkjZfvuKHd6q"
       },
       "outputs": [],
@@ -614,64 +605,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "1BHovxZZLvkd"
-      },
-      "outputs": [],
-      "source": [
-        "class Model(nn.Module):\n",
-        "    def __init__(self,):\n",
-        "        super(Model, self).__init__()\n",
-        "\n",
-        "        # conv layer\n",
-        "        # downsample = self._downsample(4096, 128)\n",
-        "        self.conv1 = nn.Conv1d(in_channels=8,\n",
-        "                               out_channels=360*16,\n",
-        "                               kernel_size=13,\n",
-        "                               stride=1,\n",
-        "                            #    padding=self._padding(downsample),\n",
-        "                               bias=False)\n",
-        "        self.conv2 = nn.Conv1d(in_channels=360*16,\n",
-        "                               out_channels=179*16,\n",
-        "                               kernel_size=13,\n",
-        "                               stride=1,\n",
-        "                            #    padding=self._padding(downsample),\n",
-        "                               bias=False)\n",
-        "\n",
-        "        # linear layer\n",
-        "        self.lin = nn.Linear(in_features=32*128,\n",
-        "                             out_features=1)\n",
-        "\n",
-        "        # ReLU\n",
-        "        self.relu = nn.ReLU()\n",
-        "\n",
-        "    def _padding(self, downsample):\n",
-        "        return max(0, int(np.floor((self.kernel_size - downsample + 1) / 2)))\n",
-        "\n",
-        "    def _downsample(self, seq_len_in, seq_len_out):\n",
-        "        return int(seq_len_in // seq_len_out)\n",
-        "\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x= x.transpose(2,1)\n",
-        "\n",
-        "        x = self.relu(self.conv1(x))\n",
-        "        x_flat= x.view(x.size(0), -1)\n",
-        "        x = self.lin(x_flat)\n",
-        "\n",
-        "        return torch.sigmoid(x)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "JgcewhfgCBdj"
       },
       "outputs": [],
       "source": [
-        "class SmallNet(nn.Module):\n",
+        "class Model(nn.Module):\n",
         "    def __init__(self):\n",
-        "        super(SmallNet, self).__init__()\n",
+        "        super(Model, self).__init__()\n",
         "        self.conv1 = nn.Sequential(\n",
         "            nn.Conv1d(8, 16, kernel_size=3, padding=1),\n",
         "            nn.BatchNorm1d(16),\n",
@@ -705,62 +645,6 @@
         "            nn.ReLU(),\n",
         "            nn.Conv1d(256, 256, kernel_size=3, padding=1),\n",
         "            nn.BatchNorm1d(256),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool1d(2)\n",
-        "        )\n",
-        "        self.avg_pool = nn.AdaptiveAvgPool1d(1)\n",
-        "        self.dropout = nn.Dropout(0.5)\n",
-        "        self.fc = nn.Linear(256, 1)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x = x.transpose(1, 2)\n",
-        "        x = self.conv1(x)\n",
-        "        x = self.conv2(x)\n",
-        "        x = self.conv3(x)\n",
-        "        x = self.conv4(x)\n",
-        "        x = self.avg_pool(x)\n",
-        "        x = torch.flatten(x, 1)\n",
-        "        x = self.dropout(x)\n",
-        "        x = self.fc(x)\n",
-        "        return torch.sigmoid(x)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vmUjFTbz5EFt"
-      },
-      "outputs": [],
-      "source": [
-        "class NeuralNetwork(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super(NeuralNetwork, self).__init__()\n",
-        "        self.conv1 = nn.Sequential(\n",
-        "            nn.Conv1d(8, 16, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Conv1d(16, 16, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool1d(2)\n",
-        "        )\n",
-        "        self.conv2 = nn.Sequential(\n",
-        "            nn.Conv1d(16, 64, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Conv1d(64, 64, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool1d(2)\n",
-        "        )\n",
-        "        self.conv3 = nn.Sequential(\n",
-        "            nn.Conv1d(64, 128, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Conv1d(128, 128, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool1d(2)\n",
-        "        )\n",
-        "        self.conv4 = nn.Sequential(\n",
-        "            nn.Conv1d(128, 256, kernel_size=3, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.Conv1d(256, 256, kernel_size=3, padding=1),\n",
         "            nn.ReLU(),\n",
         "            nn.MaxPool1d(2)\n",
         "        )\n",
@@ -793,7 +677,11 @@
         "<br />\n",
         "\n",
         "\n",
-        "**<font color='red'>Your explanation here:</font>**\n"
+        "**<font color='red'>Your explanation here:</font>**\n",
+        "- The depth of the CNN has been increased to enable more detailed representation of the data and therfore improve the predictive performance.\n",
+        "- The architecture has been modelled according [to a paper](https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-021-01736-y) aiming to solve a similar goal. This way we roughly new what size of network is needed.\n",
+        "- We have added batch normalisation to stabalise the training and therefore get a higher performance\n",
+        "\n"
       ]
     },
     {
@@ -2206,13 +2094,14 @@
         "\n",
         "**<font color='red'>Your explanation here:</font>**\n",
         "\n",
-        "Your team id: **<font color='red'>Fill in</font>**\n",
+        "Your team id: **<font color='red'>Team</font>**\n",
+        "\n",
         "\n",
         "| Submission note | Accuracy | F1 | AUC | AP | Submission description |\n",
         "| --------------- | -------- | -- | --  | -- | ---------------------- |\n",
-        "|xxx              | 0        | 0  | 0   | 0  | desc                   |\n",
-        "|xxx              | 0        | 0  | 0   | 0  | desc                   |\n",
-        "|xxx              | 0        | 0  | 0   | 0  | desc                   |"
+        "|xxx              | 0.941        | 0.940  | 0.982   | 0.980  | BIG Net w/ BN                   |\n",
+        "|xxx              | 0.918        | 0.916  | 0.980   | 0.978  | BIG Net + balanced                   |\n",
+        "|xxx              | 0.924        | 0.921  | 0.971   | 0.969  | BIG Net                   |"
       ]
     },
     {
@@ -2239,15 +2128,6 @@
         "- Some classes might be more important to predict correctly then others, especially in medicine\n",
         "- Easier to understand what kind of mistakes the model is making which might help figuring out how to improve the results"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "q9pqgeFlKOhY"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
