Hoped it would be sub 4

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -125,7 +125,7 @@
       },
       "outputs": [],
       "source": [
-        "# !git clone https://github.com/klean2050/ecg-augmentations\n",
+        "!git clone https://github.com/klean2050/ecg-augmentations\n",
         "!pip install -e ecg-augmentations"
       ]
     },
@@ -678,10 +678,10 @@
         "\n",
         "\n",
         "**<font color='red'>Your explanation here:</font>**\n",
-        "- The depth of the CNN has been increased to enable more detailed representation of the data and therfore improve the predictive performance.\n",
-        "- The architecture has been modelled according [to a paper](https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-021-01736-y) aiming to solve a similar goal. This way we roughly new what size of network is needed.\n",
-        "- We have added batch normalisation to stabalise the training and therefore get a higher performance\n",
-        "\n"
+        "- The depth of the CNN has been increased to enable more detailed representation of the data and therefore improve the predictive performance.\n",
+        "- The architecture has been modelled according [to a paper](https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-021-01736-y/tables/1) aiming to solve a similar goal. This way we roughly new what size of network is needed.\n",
+        "- The pooling layers reduce the dimetions of the outputs from layers and therefore improving the efficiency of the model and potentially helping with overfitting.\n",
+        "- We have added batch normalisation to stabilise the training and therefore get a higher performance"
       ]
     },
     {
@@ -937,7 +937,7 @@
         "\"\"\"\n",
         "learning_rate = 1e-3\n",
         "weight_decay =  0 #1e-2\n",
-        "num_epochs = 30\n",
+        "num_epochs = 60\n",
         "batch_size = 64\n",
         "\n",
         "# Choose the augmentations\n",
@@ -1003,8 +1003,8 @@
         "sampler = WeightedRandomSampler(weights=train_sample_weights, num_samples=len(dataset_train), replacement=True)\n",
         "\n",
         "# build data loaders\n",
-        "train_dataloader = DataLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
-        "# train_dataloader = DataLoader(dataset_train_aug, batch_size=batch_size, sampler=sampler)\n",
+        "# train_dataloader = DataLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
+        "train_dataloader = DataLoader(dataset_train_aug, batch_size=batch_size, sampler=sampler)\n",
         "valid_dataloader = DataLoader(dataset_valid, batch_size=batch_size, shuffle=False)\n",
         "tqdm.write(\"Done!\\n\")\n"
       ]
@@ -1700,7 +1700,7 @@
         "\"\"\"\n",
         "TASK: Replace the baseline model with your model; Insert your code here\n",
         "\"\"\"\n",
-        "model = SmallNet()\n",
+        "model = Model()\n",
         "model.to(device=device)\n",
         "tqdm.write(\"Done!\\n\")\n",
         "\n",
@@ -1721,8 +1721,8 @@
         "OPTIONAL: define a learning rate scheduler; Insert your code here\n",
         "\"\"\"\n",
         "# lr_scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=0.01, steps_per_epoch=len(train_dataloader), epochs=num_epochs)\n",
-        "# lr_scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=15, gamma=0.1)\n",
-        "lr_scheduler = None\n",
+        "lr_scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=15, gamma=0.25, verbose=True)\n",
+        "# lr_scheduler = None\n",
         "\n",
         "# =============== Train model =============================================#\n",
         "tqdm.write(\"Training...\")\n",
@@ -1916,7 +1916,7 @@
         "\"\"\"\n",
         "TASK: Replace the baseline model with your model; Insert your code here\n",
         "\"\"\"\n",
-        "model = SmallNet()\n",
+        "model = Model()\n",
         "\n",
         "# load stored model parameters\n",
         "ckpt = torch.load('model.pth', map_location=lambda storage, loc: storage)\n",
@@ -2099,9 +2099,9 @@
         "\n",
         "| Submission note | Accuracy | F1 | AUC | AP | Submission description |\n",
         "| --------------- | -------- | -- | --  | -- | ---------------------- |\n",
-        "|xxx              | 0.941        | 0.940  | 0.982   | 0.980  | BIG Net w/ BN                   |\n",
-        "|xxx              | 0.918        | 0.916  | 0.980   | 0.978  | BIG Net + balanced                   |\n",
-        "|xxx              | 0.924        | 0.921  | 0.971   | 0.969  | BIG Net                   |"
+        "|BIG Net w/ BN             | 0.941        | 0.940  | 0.982   | 0.980  |BN + augs                   |\n",
+        "|BIG Net + balanced              | 0.918        | 0.916  | 0.980   | 0.978  |balanced + LRS                   |\n",
+        "|BIG Net              | 0.924        | 0.921  | 0.971   | 0.969  |base                   |\n"
       ]
     },
     {
@@ -2126,7 +2126,8 @@
       "source": [
         "- The data may be in balanced\n",
         "- Some classes might be more important to predict correctly then others, especially in medicine\n",
-        "- Easier to understand what kind of mistakes the model is making which might help figuring out how to improve the results"
+        "- Easier to understand what kind of mistakes the model is making which might help figuring out how to improve the results\n",
+        "- If we only focus on one metric we might not get the full picture of the predictions or not be able to focus on the important part of the predictions. For example if we only track AUC we would only see information about the possitive samples in the data and no information about the negative class or the tradeoffs between possitibe and negative predictions."
       ]
     }
   ],
