--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,15 @@
         "id": "9_DJ6T4v5EFk",
         "outputId": "a041f84b-7e9c-41ab-f7e4-0e08f2be3fff"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "requirements.txt already exits. Using cached. Delete it manually to recieve it again!\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
@@ -131,11 +139,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "JkjZfvuKHd6q"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'ecg_augmentations'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[35], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mh5py\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mecg_augmentations\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ecg_augmentations'"
+          ]
+        }
+      ],
       "source": [
         "# Import\n",
         "import torch\n",
@@ -603,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "JgcewhfgCBdj"
       },
@@ -681,7 +701,7 @@
         "- The depth of the CNN has been increased to enable more detailed representation of the data and therefore improve the predictive performance.\n",
         "- The architecture has been modelled according [to a paper](https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-021-01736-y/tables/1) aiming to solve a similar goal. This way we roughly new what size of network is needed.\n",
         "- The pooling layers reduce the dimetions of the outputs from layers and therefore improving the efficiency of the model and potentially helping with overfitting.\n",
-        "- We have added batch normalisation to stabilise the training and therefore get a higher performance"
+        "- We have added batch normalisation to stabilise the training and therefore get a higher performance and dropout for get more robust models."
       ]
     },
     {
@@ -713,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "QMLCx9Cahr7f"
       },
@@ -780,7 +800,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "xWOvM9e5ijqk"
       },
@@ -882,11 +902,11 @@
         "\n",
         "The hyperparameters have been fine-tuned through a small search around typical values for this type of small CNN and the specific task at hand. The tuning process aimed to maximize performance on the validation set while ensuring a balance across all metrics.\n",
         "\n",
-        "- Learning rate: A higher learning rate appeared to yield better results. In later models, a scheduler was implemented to reduce the learning rate by a factor of 0.1 towards the end of training.\n",
+        "- Learning rate: A higher learning rate appeared to yield better results. In later models, a scheduler was implemented to reduce the learning rate by a factor of 0.25 every 15 epochs.\n",
         "- Weight decay: We chose not to use weight decay, as it didn't show improvements in performance.\n",
         "- Number of epochs: To ensure effective learning, we selected a relatively high number of epochs. Since the best model is chosen based on validation loss, overfitting is not a major concern.\n",
         "- Batch size: A larger batch size was employed to expedite training. This value was offset by tuning the learning rate accordingly.\n",
-        "- Augmentations: Various augmentations were tested and implemented, with specific details explained when discussing the final model."
+        "- Augmentations: Various augmentations were tested and implemented, this created more samples for the model to learn from."
       ]
     },
     {
@@ -1860,7 +1880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1868,7 +1888,17 @@
         "id": "WvKUrAIW5EFx",
         "outputId": "a0af62f0-d9dc-4e19-a8c9-ca96877430b1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Building data loaders...\n",
+            "Done!\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# build the dataloader once and re-use when running the cell below possibly multiple times.\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -1887,7 +1917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1909,7 +1939,31 @@
         "id": "0-m4CYeW_hvO",
         "outputId": "c7739a43-6d43-4219-945d-c7aaea1b4be8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Define model...\n",
+            "Done!\n",
+            "\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "dbfd0ebbcb4647cbb6bdcab4b3faf942",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Testing:   0%|          | 0/188 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "# =============== Define model ================================================#\n",
         "tqdm.write(\"Define model...\")\n",
@@ -2019,7 +2073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2027,7 +2081,15 @@
         "id": "DRaCnCLsgHPg",
         "outputId": "d1a9b966-787c-47e5-9093-778b9ee8856d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "200\n"
+          ]
+        }
+      ],
       "source": [
         "# 2. Registration of your team\n",
         "host = \"http://hyperion.it.uu.se:5050/\"\n",
@@ -2052,7 +2114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2060,7 +2122,15 @@
         "id": "I03QEBiegF7_",
         "outputId": "963f7ceb-2e5d-4f2a-f4c8-80d53cc83a35"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Submission updated!\n"
+          ]
+        }
+      ],
       "source": [
         "# 3. Upload the prediction as submission\n",
         "\n",
@@ -2068,7 +2138,7 @@
         "\"\"\"\n",
         "TASK: Add a note for you submission\n",
         "\"\"\"\n",
-        "note = 'BIG Net w/ BN' #Fill in a string\n",
+        "note = 'Bn, bal, lrs, augs' #Fill in a string\n",
         "\n",
         "# Submit the predictions to the leaderboard. Note, this also saves your submissions in your colab folder\n",
         "r = submit(team_id, password, soft_pred.tolist(), note)\n",
@@ -2077,7 +2147,8 @@
         "elif r.status_code == 200:\n",
         "    print(\"Submission updated!\")\n",
         "else:\n",
-        "    print(r.status_code)"
+        "    print(r.status_code)\n",
+        "    print(r.text)\n"
       ]
     },
     {
@@ -2126,7 +2197,7 @@
       "source": [
         "- The data may be in balanced\n",
         "- Some classes might be more important to predict correctly then others, especially in medicine\n",
-        "- Easier to understand what kind of mistakes the model is making which might help figuring out how to improve the results\n",
+        "- Looking at different metrics that measure different attributes of the result may make the mistakes in the results easier to understand which might help figuring out how to improve the results\n",
         "- If we only focus on one metric we might not get the full picture of the predictions or not be able to focus on the important part of the predictions. For example if we only track AUC we would only see information about the possitive samples in the data and no information about the negative class or the tradeoffs between possitibe and negative predictions."
       ]
     }
