One more excercise

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "Fill this out for the submission of the assignment (you submit this notebook with your solution)\n",
         "\n",
-        "- **Student names:** <font color='red'>Joanna Pales Huix and Adam Orucu</font>\n",
+        "- **Student names:** <font color='red'>Joana Pales Huix and Adam Orucu</font>\n",
         "\n",
         "- **Team ID:** <font color='red'>Team</font>\n",
         "\n",
@@ -2164,6 +2164,7 @@
         "\n",
         "\n",
         "**<font color='red'>Your explanation here:</font>**\n",
+        "We started with model that is comperatively larger than the baseline model so it is represent the data in more detail. In the next submission (BIG Net + balanced) we aimed to balance the data by sampling the possible classes with a probability that reflects their occurance in the dataset. We also added a learning rate scheduler and tried out different settings for it. Our last submission added bath normalisation layers, and created augmentations of the data. We also removed the previously used sampling to balance the data. This gave us the best result. The main improvement came from using the batch norm, however augmentations also seemed to work better than sampling in improving the F1 score which was what we were trying to do in this last run.\n",
         "\n",
         "Your team id: **<font color='red'>Team</font>**\n",
         "\n",
